--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "classnames": "^2.3.1",
     "eslint-config-react-app": "^7.5.0 || ^8.0.0",
     "firebase": "^9.8.2",
     "node-sass": "^7.0.1",
